<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile_pic"
        android:icon="@drawable/person_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_sort"
        android:icon="@drawable/sort_24"
        android:title="@string/title_sort" />

    <item
        android:id="@+id/navigation_change_page"
        android:icon="@drawable/arrow_up_24"
        android:title="@string/title_page" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_24dp"
        android:title="@string/title_home" />
</menu>