<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B1E1FF">

    <Button
        style="@style/Nav_Button"
        android:id="@+id/distribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_Dis_date"
        app:layout_constraintBottom_toTopOf="@+id/posted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        style="@style/Nav_Button"
        android:id="@+id/posted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_Post_date"
        app:layout_constraintBottom_toTopOf="@+id/distributor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distribution"
        android:gravity="left|center_vertical"
        android:paddingLeft="50dp"
        android:backgroundTint="#B1E1FF"/>

    <Button
        style="@style/Nav_Button"
        android:id="@+id/distributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_name"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posted"
        android:gravity="left|center_vertical"
        android:paddingLeft="50dp"
        android:backgroundTint="#B1E1FF"/>

    <Button
        style="@style/Nav_Button"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_Post_name"
        app:layout_constraintBottom_toTopOf="@+id/people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distributor"
        android:gravity="left|center_vertical"
        android:paddingLeft="50dp"
        android:backgroundTint="#B1E1FF" />

    <Button
        style="@style/Nav_Button"
        android:id="@+id/people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_people"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:gravity="left|center_vertical"
        android:paddingLeft="50dp"
        android:backgroundTint="#B1E1FF"/>

</androidx.constraintlayout.widget.ConstraintLayout>