<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="222dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dumplings" />

            <TextView
                android:id="@+id/PostHeader"
                style="@style/_detail_act_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/da_postHeader"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/MealType"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/MealType"
                style="@style/_detail_act_headers"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:paddingLeft="11dp"
                android:text="@string/da_mealType"
                app:layout_constraintBottom_toTopOf="@+id/line"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toBottomOf="@+id/PostHeader" />

            <View
                android:id="@+id/line"
                style="@style/_detail_line_background"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/MealType" />

            <TextView
                android:id="@+id/Details"
                style="@style/_detail_act_headers"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="13dp"
                android:text="@string/da_detail"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/person"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toBottomOf="@+id/MealType" />

            <ImageView
                android:id="@+id/date_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/date"
                app:layout_constraintEnd_toStartOf="@+id/date"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/date"
                app:srcCompat="@drawable/calendar_24" />

            <TextView
                android:id="@+id/date"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/da_date"
                app:layout_constraintBottom_toTopOf="@+id/time"
                app:layout_constraintStart_toStartOf="@+id/MealType"
                app:layout_constraintTop_toBottomOf="@+id/person" />

            <ImageView
                android:id="@+id/time_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/time"
                app:layout_constraintEnd_toStartOf="@+id/time"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/time"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/time"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_time"
                app:layout_constraintBottom_toTopOf="@+id/food"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/date" />

            <ImageView
                android:id="@+id/location_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/location"
                app:layout_constraintEnd_toStartOf="@+id/location"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/location"
                app:srcCompat="@drawable/location" />

            <TextView
                android:id="@+id/location"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_location"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/line1"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/contact" />

            <ImageView
                android:id="@+id/company_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/company"
                app:layout_constraintEnd_toStartOf="@+id/company"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/company"
                app:srcCompat="@drawable/company" />

            <TextView
                android:id="@+id/company"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_company"
                app:layout_constraintBottom_toTopOf="@+id/contact"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/food" />

            <ImageView
                android:id="@+id/food_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/food"
                app:layout_constraintEnd_toStartOf="@+id/food"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/food"
                app:srcCompat="@drawable/food_24" />

            <TextView
                android:id="@+id/food"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_food"
                app:layout_constraintBottom_toTopOf="@+id/company"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <ImageView
                android:id="@+id/person_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/person"
                app:layout_constraintEnd_toStartOf="@+id/person"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/person"
                app:srcCompat="@drawable/person_24" />

            <TextView
                android:id="@+id/person"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_person"
                app:layout_constraintBottom_toTopOf="@+id/date"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/Details" />

            <ImageView
                android:id="@+id/contact_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                style="@style/_detail_ic_background"
                app:layout_constraintBottom_toBottomOf="@+id/contact"
                app:layout_constraintEnd_toStartOf="@+id/contact"
                app:layout_constraintStart_toStartOf="@+id/PostHeader"
                app:layout_constraintTop_toTopOf="@+id/contact"
                app:srcCompat="@drawable/contact_24" />

            <TextView
                android:id="@+id/contact"
                style="@style/_detail_act_list_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+61 9030 890 321"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/location"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/company" />

            <View
                android:id="@+id/line1"
                style="@style/_detail_line_background"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/location"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/description"
                style="@style/_detail_act_list_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="70dp"
                android:text="@string/da_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/date_ic"
                app:layout_constraintTop_toBottomOf="@+id/line1"
                app:layout_constraintWidth_percent="0.93" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        style="@style/_detail_act_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateBtn"
        style="@style/detail_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deleteBtn" />

    <Button
        android:id="@+id/deleteBtn"
        style="@style/detail_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/updateBtn"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

<!--people , contact , posted date-->